testsuite/tests/dash-Ix/use_static.ocamlc.reference
File "use_static.ml", line 5, characters 22-23:
5 | module (M @ static) = S
                          ^
Error: The module is "dynamic"
         because only modules from core libraries and the current library can currently be static.
       However, the module highlighted is expected to be "static".
